--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
     <title>website builder</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <script src="insertion.js"></script>
-    <script src="index.js"></script>
+    <script src="./js/insertion.js"></script>
+    <script src="./js/index.js"></script>
 </head>
 <body>
     <div id="bootstrap-override">
@@ -33,9 +33,9 @@
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Insert Element</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#" id="insert-paragraph-dropdown-item">Paragraph/Text</a></li>
-                            <li><a class="dropdown-item" href="#">Image</a></li>
-                            <li><a class="dropdown-item" href="#">Hyperlink</a></li>
-                            <li><a class="dropdown-item" href="#">User Input Field</a></li>
+                            <li><a class="dropdown-item" href="#" id="insert-image-dropdown-item">Image</a></li>
+                            <li><a class="dropdown-item" href="#" id="insert-hyperlink-dropdown-item">Hyperlink</a></li>
+                            <li><a class="dropdown-item" href="#" id="insert-input-dropdown-item">User Input Field</a></li>
                         </ul>
                     </li>
                     <li class="nav-item my-navbar-button ml-5" id="drag-element-button">
