--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,10 @@
                 <li class="nav-item toolbox" id="resize-element-button">
                     <button class="btn btn-primary">Resize</button>
                 </li>
+
+                <li class="nav-item toolbox" id="delete-element-button">
+                    <button class="btn btn-primary">Delete</button>
+                </li>
                 </ul>
             </div>
         </nav>
