--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,6 +38,7 @@
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
                             <a class="dropdown-item" href="#" id="insert-paragraph-dropdown-item">Paragraph</a>
                             <a class="dropdown-item" href="#" id="insert-hyperlink-dropdown-item">Hyper Link</a>
+                            <a class="dropdown-item" href="#" id="insert-media-object-item">Media Object</a>
                             <input type="file"  accept="image/*" name="image" id="file" style="display: none;">
                             <a class="dropdown-item" href="#" id="insert-image-dropdown-item"><label for="file" style="cursor: pointer;">Upload Image</label></a>
                         </div>
@@ -64,14 +65,6 @@
         </div>
 
         <div id="main-canvas">
-
-            <!-- <div id="resize-test2">
-                <p>Click the button, then drag the bottom right corner to resize this DIV element.</p>
-             </div> -->
-            <!--
-            <button type="button" class="btn btn-primary" id="add-text-button">Add Text Field</button>
-            -->
-        
         </div>
 
     </div>
