--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,6 +45,7 @@
                     </div>
                     <button type="button" class="btn btn-secondary" id="drag-element-button">Drag</button>
                     <button type="button" class="btn btn-secondary" id="resize-element-button">Resize</button>
+                    <button type="button" class="btn btn-secondary" id="delete-element-button">Delete</button>
                 
                   </div>
                 </ul>
